[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibremidi"
version = "5.4.3"
description = "A modern C++ MIDI 1 / MIDI 2 real-time & file I/O library. Supports Windows, macOS, Linux and WebMIDI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    # Git history
    { name = "Celerier Jean-Michaël", email = "jeanmichael.celerier@gmail.com" },
    { name = "Caleb Xu", email = "calebcenter@live.com" },
    { name = "Eric Conlon", email = "37287+ejconlon@users.noreply.github.com" },
    { name = "Alyssa Ross", email = "hi@alyssa.is" },
    { name = "Atsushi Eno", email = "atsushieno@gmail.com" },
    { name = "Gabe Gonzalez", email = "lilggamegenius@gmail.com" },
    { name = "Andrew McCann", email = "amccann@gmail.com" },
    { name = "fwcd", email = "fwcd@fwcd.dev" },
    { name = "christoph", email = "christoph.diesch@t-online.de" },
    { name = "neil", email = "github@neilpang.com" },
    { name = "Yuri Victorovich", email = "yuri@FreeBSD.org" },
    { name = "Ivan Hawkes", email = "ivan.hawkes@gmail.com" },
    { name = "Jan Schuerman", email = "jan.schuerman@on-hertz.com" },
    { name = "tmwsnrx", email = "xrnswmt@protonmail.com" },
    { name = "Martin Stimpfl", email = "martin.stimpfl@gmail.com" },
    { name = "HyperLan-git", email = "youness.rekik@epita.fr" },
    { name = "Dimitre", email = "dimitre@users.noreply.github.com" },
    { name = "bratner", email = "ratner2@gmail.com" },
    { name = "Curve", email = "fynnbwdt@gmail.com" },
    { name = "Christopher P. Yarger", email = "cpyarger@gmail.com" },
    { name = "Jonathan Lidbeck", email = "admin@12toneinteractive.com" },
    { name = "Christopher P Yarger", email = "cpyarger@gmail.com" },
    { name = "Cacodemon345", email = "wahil1976@outlook.com" },
    { name = "Yuriy Yashchenko", email = "yyashchenko@inmusicbrands.com" },
    { name = "Yuriy Yashchenko", email = "yuriy.yashchenko@gmail.com" },

    # Original rtmidi authors
    { name = "Adam Avramov", email = "fallenblood@gmail.com" },
    { name = "aib", email = "aibok42@gmail.com" },
    { name = "Alexandros Theodotou", email = "alex@zrythm.org" },
    { name = "amosonn", email = "amosonn@gmail.com" },
    { name = "andrew morton", email = "drewish@katherinehouse.com" },
    { name = "Ashley Hedges", email = "ashley@soundswitch.com" },
    { name = "Atsushi Eno", email = "atsushieno@gmail.com" },
    { name = "Bartek Łukawski", email = "bwmn.peter@gmail.com" },
    { name = "Bart Spaans", email = "bart.spaans@gmail.com" },
    { name = "Ben Swift", email = "ben@benswift.me" },
    { name = "Chris Chronopoulos", email = "chronopoulos.chris@gmail.com" },
    { name = "Christian Köstlin", email = "christian.koestlin@esrlabs.com" },
    { name = "Christopher Arndt", email = "chris@chrisarndt.de" },
    { name = "emlai", email = "emil@cs.helsinki.fi" },
    { name = "Francisco Demartino", email = "demartino.francisco@gmail.com" },
    { name = "Gary Scavone", email = "gary@music.mcgill.ca" },
    { name = "garyscavone", email = "garyscavone@users.noreply.github.com" },
    { name = "Hugo Hromic", email = "hugo.hromic@deri.org" },
    { name = "IOhannes m zmölnig", email = "zmoelnig@umlautQ.umlaeute.mur.at" },
    { name = "Jake Sandlund", email = "jake@jakesandlund.com" },
    { name = "Jean-Michaël Celerier", email = "jeanmichael.celerier+github@gmail.com" },
    { name = "jgvictores", email = "jcgvicto@gmail.com" },
    { name = "johnty", email = "johntywang@gmail.com" },
    { name = "JP Cimalando", email = "jpcima@users.noreply.github.com" },
    { name = "kidproquo", email = "kidproquo@users.noreply.github.com" },
    { name = "Lane Spangler", email = "las4vc@virginia.edu" },
    { name = "Martin Delille", email = "martin@phonations.com" },
    { name = "Mattes D", email = "github@xoft.cz" },
    { name = "mcc", email = "andi.m.mcclure@gmail.com" },
    { name = "Michael Dahl", email = "micdah@gmail.com" },
    { name = "Nicolas Boulenguez", email = "nicolas.boulenguez@free.fr" },
    { name = "Nicolas Boulenguez", email = "nicolas@debian.org" },
    { name = "Oli Larkin", email = "olilarkin@googlemail.com" },
    { name = "Phildo", email = "phildo211@gmail.com" },
    { name = "philip", email = "me@filou.se" },
    { name = "Przemyslaw Wegrzyn", email = "pwegrzyn@codepainters.com" },
    { name = "Rémy Mouëza", email = "remy.moueza@gmail.com" },
    { name = "Rian Hunter", email = "rian@alum.mit.edu" },
    { name = "Rory Jaffe", email = "rsjaffe@gmail.com" },
    { name = "Ryan Schmidt", email = "git@ryandesign.com" },
    { name = "sagamusix", email = "saga-games@arcor.de" },
    { name = "Saga Musix", email = "sagamusix@users.noreply.github.com" },
    { name = "Sam Hocevar", email = "sam@hocevar.net" },
    { name = "Sebastien Alaiwan", email = "sebastien.alaiwan@gmail.com" },
    { name = "Serge A. Zaitsev", email = "zaitsev.serge@gmail.com" },
    { name = "Stephen Sinclair", email = "radarsat1@gmail.com" },
    { name = "Stephen Sinclair", email = "radarsat1@users.noreply.github.com" },
    { name = "Stephen Sinclair", email = "sinclair@music.mcgill.ca" },
    { name = "Stephen Sinclair", email = "stephen.sinclair@inria.cl" },
    { name = "Szymon Kaliski", email = "kaliskiszymon@gmail.com" },
    { name = "Thiago Goulart", email = "thiagosonego@gmail.com" },
    { name = "Tiago Morais Morgado", email = "eremitatm88@gmail.com" },
    { name = "Tobias Schlemmer", email = "keinstein@users.sourcforge.net" },
    { name = "Yuri", email = "yuri@tsoft.com" },

    # Original ModernMIDI authors
    { name = "Dimitri Diakopoulos", email = "ddiakopoulos@gmail.com" },
    { name = "Lauren Hughes", email = "lh0xfb@gmail.com" },

]
license-files = [
    "LICENSE.md"
]
license = "MIT AND BSD-2-Clause"

[project.urls]
Homepage = "https://github.com/celtera/libremidi"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
cmake.source-dir = "./bindings/python"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
config-settings = "cmake.build-type=Release"

# Skip 32-bit builds and musl
skip = "*-win32 *-manylinux_i686 *-musllinux_*"

[tool.cibuildwheel.linux]
# Use manylinux_2_28 for pipewire availability (AlmaLinux 8 based)
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "dnf install -y alsa-lib-devel pipewire-devel jack-audio-connection-kit-devel"

[tool.cibuildwheel.macos]
# macOS 10.14+ required for C++17 aligned allocation used by nanobind
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

[[tool.cibuildwheel.overrides]]
select = "cp312-macosx_* cp312-manylinux_*"
config-settings = "cmake.build-type=Release"
inherit.environment = "append"
environment = { SKBUILD_WHEEL_PY_API = "cp312" }
